# evaluate-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
data/evaluations/: 01_contains_pattern.yaml  02_structured_output.yaml  03_meets_criteria.yaml  04_mmlu_pro.yaml  05_ifeval.yaml  config.yaml
evaluate_ai/: constants.py  evaluation.py  evaluation_instance.py  evaluation_registry.py  run_config.py  utils.py
evaluate_ai/evaluations/: contains_pattern.py  instruction_following.py  meets_criteria.py  mmlu_pro.py  structured_output.py
evaluate_ai/evaluations/instruction_following_eval/: instructions.py  instructions_registry.py  instructions_util.py
evaluate_ai/tinydb_helpers/: db_path.py  evaluation_data.py
scripts/: run_evaluations.py  run_manual_evaluations.py  view_results.py
scripts/tinydb_store/: remove_result.py
