[project]
name = "evaluate-ai"
version = "0.5.0"
description = ""
authors = [
    { name = "David Koleczek", email = "45405824+DavidKoleczek@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11, <3.13"

dependencies = [
    "jsonschema>=4.23",
    "immutabledict>=4.2",
    "langdetect>=1.0",
    "loguru>=0.7",
    "nltk>=3.9",
    "not_again_ai[data,llm,local_llm]>=0.15.0",
    "pendulum>=3.0",
    "pydantic>=2.10",
    "pydantic_extra_types>=2.10",
    "pyarrow>=19.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "rich>=13.9",
    "tenacity>=9.0",
    "tinydb>=4.8",
]

[project.urls]
Homepage = "https://github.com/DaveCoDev/evaluate-ai"
Repository = "https://github.com/DaveCoDev/evaluate-ai"

[project.scripts]
run-evaluations = "scripts.run_evaluations:main"
view-results = "scripts.view_results:main"

[tool.poetry]
requires-poetry = ">=2.0.1"

[tool.poetry.group.lint.dependencies]
ruff = "*"

[tool.poetry.group.typos.dependencies]
typos = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["evaluate_ai"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = ["E501"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false
known-first-party = ["evaluate_ai"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"